--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/tests"
+    "test": "vitest --environment jsdom --root src/tests"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
